--- a/style.css
+++ b/style.css
@@ -14,7 +14,6 @@ nav{
 }
 
 html,body{
-    width: 100%;
     height: 100%;
     padding-top: 25px;
     padding-bottom: 25px;
@@ -39,18 +38,20 @@ a{
 .wrapper{
     padding-top: 40px;
     padding-left:40px;
+    float: left;
 
 }
 
 .potato{
     padding-top: 40px;
     padding-left:40px;
+    float: left;
 
 }
 
 
 
- .box{
+.box{
     margin-bottom: 8px;
     padding-top: 40px;
     padding-left:40px;
@@ -97,12 +98,12 @@ img {
 
 
 
- @media screen and (min-device-width: 800px) {
+@media screen and (min-device-width: 800px) {
     .wrapper {
         width: 250px;
         margin: 8px;
         background-color: green;
-        position: fixed;
+
 
 
 
@@ -118,9 +119,6 @@ img {
     .potato{
         width: 250px;
         background-color: green;
-        position: fixed;
-        left: 30%;
-        top: 13%;
         margin: 8px;
     }
 
