--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ nav{
 
 html,body{
     height: 100%;
+    width: 100%;
     padding-top: 25px;
     padding-bottom: 25px;
 
@@ -36,28 +37,34 @@ a{
 
 
 .wrapper{
+    width: 100%;
     padding-top: 40px;
     padding-left:40px;
     float: left;
+    background-color: green;
 
 }
 
 .potato{
+    width: 100%;
     padding-top: 40px;
     padding-left:40px;
     float: left;
+    background-color: green;
 
 }
 
 
 
 .box{
+    width: 100%;
     margin-bottom: 8px;
     padding-top: 40px;
     padding-left:40px;
     padding-right:40px;
-    padding-bottom: 40px;
+    padding-bottom: 10%;
     text-align:center;
+    background-color: pink;
 
 }
 
@@ -75,20 +82,23 @@ img {
 }
 
 
-@media screen and (max-device-width: 800px) {
+@media screen and (min-width: 800px) {
     .box{
-        width: 100%;
+        width: 250px;
+        margin: 8px;
         background-color: red;
     }
 
     .wrapper {
-        width: 100%;
+        width: 250px;
+        margin: 8px;
         background-color: lightskyblue;
 
     }
 
     .potato {
-        width: 100%;
+        width: 250px;
+        margin: 8px;
         background-color: lightskyblue;
 
     }
@@ -97,32 +107,6 @@ img {
 
 
 
-
-@media screen and (min-device-width: 800px) {
-    .wrapper {
-        width: 250px;
-        margin: 8px;
-        background-color: green;
-
-
-
-
-
-    }
-
-    .box{
-        width: 250px;
-        margin: 8px;
-        background-color: pink;
-    }
-
-    .potato{
-        width: 250px;
-        background-color: green;
-        margin: 8px;
-    }
-
-}
 
 
 
